# libdbc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yaml
dbcconvert/: CMakeLists.txt  dbcconvert.cpp
lib/libdbc/: CMakeLists.txt
lib/libdbc/include/libdbc/: libdbc.h
lib/libdbc/src/: libdbc.cpp  libdbc_parse.cpp
test/: CMakeLists.txt  TestBitExtraction.cpp  TestDataDecode.cpp  TestParsing.cpp
test/data/: Test_Multiplex.dbc  Test_OneMessage_OneSignal.dbc  VolvoCanBus.dbc  lgx_start_idle_off.csv
test/dbc/: VolvoCanBus.dbc
